add javassist example